# task-flaskREST

./: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
task_flask_music/: models.py  routes.py  schema.py
task_flaskrest/: __init__.py  admin.py  functions.py  models.py  routes.py  schema.py
tests/: conftest.py  test_api_audio.py  test_api_quiz.py
